[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "licenser"
version = "1.0.0"
authors = [
  { name="Brian Musakwa", email="digreatbrian@gmail.com" },
]
description = "A simple module to add a license to a source code file."
readme = "README.md"
keywords = ['licenser' ,'license']
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU LESSER GENERAL PUBLIC LICENSE",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/digreatbrian/licenser"
"Bug Tracker" = "https://github.com/digreatbrian/licenser/issues"
